# nextjs-fastapi-framework

./: .pdm-python  Makefile  package.json  pnpm-lock.yaml  pyproject.toml
api/: index.py
src/: store.ts
src/app/: layout.tsx  page.tsx
