
[project]
name = ""
version = ""
description = ""
authors = [
    { name = "MrDwarf7", email = "129040985+MrDwarf7@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.103.2",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.2",
    "motor>=3.3.1",
    "pandas>=2.1.1",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
    "exceptiongroup>=1.1.3",
    "httptools>=0.6.1",
    "pyyaml>=6.0.1",
    # "uvloop>=0.19.0",
    "watchfiles>=0.21.0",
    # "websockets>=12.0",
    "pip>=23.3.1",
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
alternate = [
    "hypercorn>=0.14.4",
]
Tool = [
    "ruff>=0.1.1",
    "black>=23.10.0",
]
dev = [
    "icecream>=2.1.3",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
